src/main/webapp/WEB-INF/themes/desktop/sass/pages/_home.scss
/*!
 * Copyright (c) 2017 Public Library of Science
 *
 * Permission is hereby granted, free of charge, to any person obtaining a
 * copy of this software and associated documentation files (the "Software"),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense,
 * and/or sell copies of the Software, and to permit persons to whom the
 * Software is furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
 * THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 * DEALINGS IN THE SOFTWARE.
 */

// HOME CONTENT

$block-height: rem-calc(250);
$block-height-small: rem-calc(180);

$image-width: rem-calc(70);
$hero-height: rem-calc(380);
$image-container: ($image-width + $pad-xsmall);

// this mixin extends the foundation grid to do two things it can't do
//1. add margins on the outside if needed
//2. use pixel widths - Digital Pulp submitted designs with columns in pixel widths that vary from page to page.
// questions:
// I am using foundation settings values.

body {
  ///////
  // home specific colors
  /////
  background: $white;

  &.plosone {
    background: $white;
  }

  %width-full {
    @include plos-grid-column($pixelwidth: full-width);
  }

  %width-xx-small {
    @include plos-grid-column(183);
  }

  %width-x-small {
    @include plos-grid-column(267);
  }

  %width-small {
    @include plos-grid-column(306);
  }

  %width-medium {
    @include plos-grid-column(470);
  }

  %width-large {
    @include plos-grid-column(633);
  }
}

.carousel-wrap.small {
  //more styling for carousel in _components.scss
  @extend %width-small;
  height: $block-height;
}

////////
// font sizes and styles
////////////

.home main {
  h1,
  h2,
  h3,
  h5,
  h6 {
    font-family: $font-face-fancy;
    line-height: 1;
    margin-bottom: $line-height;
  }
  h1 {
    font-size: rem-calc($txt-size-giant);
    a:hover {
      text-decoration: none;
    }
  }
  h2,
  h3,
  h4,
  h5 {
    @extend %home-subheader;
  }
  p {
    line-height: rem-calc($txt-size-mediumish);
    margin-bottom: 0.3125;
  }
}

///////
//page scaffolding
/////

//sizes:

.block {
  &.xx-small {
    @extend %width-xx-small;
  }

  &.x-small {
    @extend %width-x-small;
  }
  &.small {
    @extend %width-small;
  }
  &.medium {
    @extend %width-medium;
  }
  &.large {
    @extend %width-large;
  }
}

.row {
  @extend .plos-row;
}

.hero {
  @extend %width-full;
  @include blocks($padding: none, $shadow: none);
  position: relative;
  background: transparent;
}

.hero {
  // overlay colors
  &.overlay-dark > a:before {
    @extend .overlay;
    // we are using images here to match lemur.
    background: image-url("gradient-dark_1x364.png") repeat-x bottom;
  }
  &.overlay-light > a:before {
    @extend .overlay;
    background: image-url("gradient-light_1x364.png") repeat-x bottom;
  }
  img {
   // @include border-top-radius();
    width: 100%;
  }
  // hero colors: default is white text
  color: $white;
  a {
    color: $white;
  }
  &.dark-text,
  &.dark-text a {
    color: $clr-body-text;
  }

  // hero text
  .hero-content {
    position: absolute;
    width: 100%;
    bottom: 0;
    padding: $pad-small $pad-default;
    font-size: rem-calc($txt-size-medium-large);

    body.plosone & {
      width: 50%;
      bottom: $line-height-small;
      left: 0;
      right: 50%;
      font-size: rem-calc($txt-size-medium);
      background-color: $plos-one-teal;
    }

    h4 {
      font-size: $txt-size-medium;
    /*  @extend .no-margin;*/
    }
    .authors {
      width: 75%;
      display: inline-block;
      vertical-align: bottom;
    }
    p {
      @extend .no-margin;
      font-size: rem-calc($txt-size-medium-large);
      line-height: $txt-size-xlarge;
      &.credit {
        @extend %small-italic;
        text-align: right;
        width: 23%;
        vertical-align: bottom;
        display: inline-block;
        line-height: 1;
      }
    }
  }
}

body.plosone {
  .hero {
    &.overlay-dark > a:before {
      background-image: none;
    }
    .hero-content {
      .title {
        font-size: rem-calc($txt-size-large);
        text-transform: uppercase;
      }
      p {
        &.credit {
          font-size: $txt-size-small;
        }
      }

      .published_at,
      .authors {
        font-size: $txt-size-xsmall;
        width: 100%;
      }
    }
  }
}
/* ... */

